--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <script>
 
 let groupNumber = prompt("Enter Group Number").trim()
-let personNumber = prompt("Enter Group Number").trim()
+let personNumber = prompt("Enter Person Number").trim()
 
 
 
