--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <script>
 
-let groupNumber = prompt("Enter Group Number").trim()
-let personNumber = prompt("Enter Person Number").trim()
+let groupNumber = prompt("Enter Group Number (all people in your group pick same number)").trim()
+let personNumber = prompt("Enter Person Number (1-5)").trim()
 
 
 
