--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ function shuffle(array) {
 
 options = shuffle(options)
 
-alert("You get: " + options[personNumber])
+alert("You get: " + options[Number(personNumber) - 1])
 
 
 
